--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section class="resume centered">
 	<h2><span class="line">Resumé</span></h2>
 	<section class="part cf">
-		<h3 class="part-heading">Work Experience &amp; Internships</h3>
+		<h3 class="part-heading">Work Experience</h3>
 		<div class="desc">
 			<div class="period">10/2011 - 06/2012</div>
 			<h4>Student Assistant</h4>
