--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 	<meta charset="utf-8" />
-	<title></title>
+	<title>Christoph Bach - Resumé</title>
 
 	<meta name="description" content="resume of christoph bach" />
 	<meta name="author" content="christoph bach" />
