--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<li><a href="http://dribbble.com/chrisb"><i class="icon-link"></i> <span>Dribbble</span></a></li>
 		</ul>
 		<ul class="profiles">
-			<li><i class="icon-phone"></i> +46 76 / 900 4789</li>
+			<li><i class="icon-phone"></i> +49 176 / 6607 2227</li>
 		</ul>
 	</div>
 	<div class="desc">
@@ -41,14 +41,21 @@
 		While not directly related to my field of study, I however have several years of experience in developing websites, webapps and -platforms.</p>
 		<p>More precisely, I am co-owner of a little webdesign agency that I founded back in 2009 besides school and studies.
 		As a result, I am not only able to code websites and apps, but I also consider myself having an eye for good design, typography and usability.</p>
-		<p>The aim of this website is to present my resumé as an HTML5 document in order to show my coding abilities.</p>
+		<p>The aim of this website is to present my résumé as an HTML5 document in order to show my coding abilities.</p>
 	</div>
 </section>
 
 <section class="resume centered">
-	<h2><span class="line">Resumé</span></h2>
+	<h2><span class="line">Résumé</span></h2>
 	<section class="part cf">
 		<h3 class="part-heading">Work Experience</h3>
+		<div class="desc">
+			<div class="period">02/2013 - 03/2013</div>
+			<h4>Intern</h4>
+			<strong>moped.com</strong>
+			<p>My tasks at this internship included redesigning the landing page and webapp as well as creating some new assets for the mobile apps. I also coded my designs in HTML and CSS.</p>
+			<p><i class="icon-link"></i><a href="http://moped.com">moped.com</a></p>
+		</div>
 		<div class="desc">
 			<div class="period">10/2011 - 06/2012</div>
 			<h4>Student Assistant</h4>
@@ -124,5 +131,18 @@
 		<p><small>The source is on <a href="https://github.com/chbach/html5-cv">GitHub</a></small></p>
 	</div>
 </footer>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-3273474-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
