some updates to my work experience
Signed-off-by: Christoph Bach <christoph-bach@gmx.de>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</ul>
 	</div>
 	<div class="desc">
-		<p>Hi, my name is Christoph Bach, I am 22 years old and I am currently studying <em>Business Information Systems</em> at the Paderborn University.
+		<p>Hi, my name is Christoph Bach, I am 23 years old and I am currently studying <em>Business Information Systems</em> at the Paderborn University.
 		While not directly related to my field of study, I however have several years of experience in developing websites, webapps and -platforms.</p>
 		<p>More precisely, I am co-owner of a little webdesign agency that I founded back in 2009 besides school and studies.
 		As a result, I am not only able to code websites and apps, but I also consider myself having an eye for good design, typography and usability.</p>
@@ -49,6 +49,13 @@
 	<h2><span class="line">Résumé</span></h2>
 	<section class="part cf">
 		<h3 class="part-heading">Work Experience</h3>
+		<div class="desc">
+			<div class="period">since 05/2013</div>
+			<h4>Student Assistant</h4>
+			<strong>Chair of Information Management and E-Finance (Winfo2)</strong>
+			<p>Currently, I'm working on a system for peer instructions for large groups called PINGO. Find out more <a href="http://pingo.upb.de">here</a>.</p>
+			<p><i class="icon-link"></i><a href="http://wiwi.uni-paderborn.de/dep3/winfo2/lehrstuhl-news/">Winfo2</a></p>
+		</div>
 		<div class="desc">
 			<div class="period">02/2013 - 03/2013</div>
 			<h4>Intern</h4>
@@ -69,14 +76,8 @@
 			<p>My main task is to design and code webpages for clients. This includes creating layouts in Photoshop, frontend development and building templates for content management systems such as Contao, Kirby or WordPress.</p>
 			<p><i class="icon-link"></i><a href="http://the-inspired-ones.de">the-inspired-ones.de</a></p>
 		</div>
-		<div class="desc">
-			<div class="period">07/2009 - 08/2012</div>
-			<h4>Zivildienst and Temporary Employee</h4>
-			<strong>Fürstin Pauline Stiftung Detmold</strong>
-			<p>Caretaker at a retirement home.</p>
-		</div>
 	</section>
-	
+
 	<section class="part cf">
 		<h3 class="part-heading">Skills</h3>
 		<div class="desc">
@@ -86,16 +87,15 @@
 		<div class="desc">
 			<h4>Technical Skills</h4>
 			<ul>
-				<li><strong>Frontend Development:</strong> HTML5, CSS3, LESS, JavaScript (basic)</li>
-				<li><strong>Object Oriented Programming:</strong> Java, PHP</li>
-				<li><strong>Database Systems:</strong> MySQL</li>
-				<li><strong>Screen-/Webdesign</strong></li>
-				<li><strong>Software:</strong> Adobe Photoshop, Eclipse, LaTeX</li>
-				<li><strong>Frameworks:</strong> jQuery, EnyoJS, Bootstrap, Eclipse Modeling Framework, Eclipse GEF</li>
+				<li><strong>Frontend Development:</strong> HTML5, CSS3, LESS, JavaScript</li>
+				<li><strong>Object Oriented Programming:</strong> Java, PHP, Ruby</li>
+				<li><strong>Database Systems:</strong> MySQL, postgreSQL, MongoDB</li>
+				<li><strong>Screen-/Webdesign, UI/UX</strong></li>
+				<li><strong>Frameworks:</strong> jQuery, EnyoJS, AngularJS, Ruby on Rails, Bootstrap, Eclipse Modeling Framework, Eclipse GEF</li>
 			</ul>
 		</div>
 	</section>
-	
+
 	<section class="part cf">
 		<h3 class="part-heading">Education</h3>
 		<div class="desc">
